<resources>
    <string name="app_name">VelNey</string>
    <string name="slogan">Enjoy your traveling journey</string>
    <string name="signin">Sign In</string>
    <string name="newaccount">New Account</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="next">Next</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Your Passion</string>
    <string name="explore_label">Start Explore</string>
    <string name="main_label">Main Page</string>
    <string name="tips_label">Ticket Tips</string>
</resources>