<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".RegisterOneActivity"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/mregular"
        android:lineSpacingExtra="9dp"
        android:text="Create New Account"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="Please fill up the form below to \ncomplete your administration"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.057" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:color="@color/blackPrimary"
            android:lines="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/mlight"
                android:text="@string/username_label"
                android:textColor="@color/grayPrimary"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:color="@color/blackPrimary"
            android:lines="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/mlight"
                android:text="@string/password_label"
                android:textColor="@color/grayPrimary"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:color="@color/blackPrimary"
            android:lines="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/mlight"
                android:text="@string/email_label"
                android:textColor="@color/grayPrimary"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_btn_blue_primary"
            android:fontFamily="@font/mmedium"
            android:text="@string/signin"
            android:textColor="#FFF"
            android:textSize="22sp"
            app:backgroundTint="@drawable/bg_btn_blue_primary"
            tools:layout_editro_absolutY="457dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>