<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".RegisterTwoActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/mregular"
        android:lineSpacingExtra="9dp"
        android:text="Take a Photo"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="Make your best adventurous \nlook now"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.057" />

    <View
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="700dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="451dp"
        android:background="@drawable/bg_view_circle"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="230dp"
        android:src="@drawable/icon_nopic"
        android:translationZ="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="230dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_btn_plus_blue"
        android:translationZ="90dp"
        android:backgroundTint="@color/bluePrimary"
        android:fontFamily="@font/mmedium"
        android:text="+"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="280dp"
        tools:layout_editor_absoluteY="280dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:color="@color/blackPrimary"
            android:lines="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/mlight"
                android:text="@string/name_label"
                android:textColor="@color/grayPrimary"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:inputType="text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="0dp"
            android:color="@color/blackPrimary"
            android:lines="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/mlight"
                android:text="@string/bio_label"
                android:textColor="@color/grayPrimary"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_btn_blue_primary"
            android:fontFamily="@font/mmedium"
            android:text="@string/signin"
            android:textColor="#FFF"
            android:textSize="22sp"
            app:backgroundTint="@drawable/bg_btn_blue_primary"
            tools:layout_editro_absolutY="457dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/next"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:backgroundTint="@drawable/bg_btn_blue_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="660dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/btn_back"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:background="#FFF"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/btn_continue"
        tools:layout_editor_absoluteY="660dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>